Getting the exact text from the example onto here.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 <body>
     <div class='head'>
         <div class='Logo'>
-            Getting that logo here
+            Header Logo
         </div>
         <ul>
-            <li>link one</li>
-            <li>link two</li>
-            <li>link three</li>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li> header link three</li>
         </ul>
     </div>
     <div class='top'>
         <div class='box'>
-            Starting here
+            This Webiste is awesome
         </div>
         <div class="subtext">
-            subtext
+            This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
         </div>
         <button>Sign up</button>
+        <div class = 'placeholder'>
+            This is the place holder for an image. Will correct that later. 
+        </div>
     </div>
     <div class='mid'>
         <div class='box'>
