filled out most of the html text and started the css file.

--- a/index.html
+++ b/index.html
@@ -31,20 +31,32 @@
     </div>
     <div class='mid'>
         <div class='box'>
-            Then onto here
+            Some random information
         </div>
-        <ul>
-            <li>Box 1</li>
-            <li>box2</li>
-            <li>box3</li>
-            <li>box4</li>
-        </ul>
+        <div class='card'>Card 1
+            <div class='subcard'> subtext for the cards</div>
+        </div>
+        <div class='card'>Card 2
+            <div class='subcard'> subtext for the cards</div>
+        </div>
+        <div class='card'>Card 3
+            <div class='subcard'> subtext for the cards</div>
+        </div>
+        <div class='card'>Card 4
+            <div class='subcard'> subtext for the cards</div>
+        </div>
     </div>
     <div class='quote'>
         Theres a big quote we can get going here. Kinda thinking of making this a usable page for apps
     </div>
     <div class="bottom">
-        Getting towards the bottom now
+        <div class='signup'>
+            Call to action! Its time!
+        </div>
+        <div class='suvtext'>
+            Sign up for our product by clilcking that button right over there. 
+        </div>
+        <button>Sign up</button>
     </div>
     <div class="footer">
         copright @ me bitch
