Changed a mispelling of style.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class='box'>
             This Webiste is awesome
         </div>
-        <div class="subtext">
+        <div class='subtext'>
             This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
         </div>
         <button>Sign up</button>
@@ -49,7 +49,7 @@
     <div class='quote'>
         Theres a big quote we can get going here. Kinda thinking of making this a usable page for apps
     </div>
-    <div class="bottom">
+    <div class='bottom'>
         <div class='signup'>
             Call to action! Its time!
         </div>
@@ -58,7 +58,7 @@
         </div>
         <button>Sign up</button>
     </div>
-    <div class="footer">
+    <div class='footer'>
         copright @ me bitch
     </div>
 </body>
