added the images folder and a stock photo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class='head'>
+    <div class='topper'>
         <div class='Logo'>
             Header Logo
         </div>
@@ -18,15 +18,17 @@
         </ul>
     </div>
     <div class='top'>
-        <div class='box'>
-            This Webiste is awesome
-        </div>
-        <div class='subtext'>
-            This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
-        </div>
-        <button>Sign up</button>
-        <div class = 'placeholder'>
-            This is the place holder for an image. Will correct that later. 
+        <div class='top-left'>
+            <div class='box'>
+                This Webiste is awesome
+            </div>
+            <div class='subtext'>
+                This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
+            </div>
+            <button>Sign up</button>
+            <div class = 'placeholder'>
+                This is the place holder for an image. Will correct that later. 
+            </div>
         </div>
     </div>
     <div class='mid'>
