added in images, adjusted some flex for the card portion of the page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class='topper'>
-        <div class='Logo'>
+        <div class='logo'>
             Header Logo
         </div>
         <ul>
             <li>header link one</li>
             <li>header link two</li>
-            <li> header link three</li>
+            <li>header link three</li>
         </ul>
     </div>
     <div class='top'>
@@ -26,16 +26,15 @@
                 This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
             </div>
             <button>Sign up</button>
-            <div class = 'placeholder'>
-                This is the place holder for an image. Will correct that later. 
-            </div>
         </div>
+        <img src="../landing-page/images/boat.png" width="310" height="310">
+    </div>
+    <div class='box'>
+        Some random information
     </div>
     <div class='mid'>
-        <div class='box'>
-            Some random information
-        </div>
-        <div class='card'>Card 1
+        <div class='card'>
+            <img src="../landing-page/images/boat.png" width="50" hieght="50">
             <div class='subcard'> subtext for the cards</div>
         </div>
         <div class='card'>Card 2
