bit all over the place today, but formatted the quote a bit and started on the call to action as well

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <button>Sign up</button>
         </div>
-        <img src="../landing-page/images/boat.png" width="310" height="310">
+        <img src="../landing-page/images/boat.png" width="310" height="250">
     </div>
     <div class='box'>
         Some random information
@@ -48,16 +48,17 @@
         </div>
     </div>
     <div class='quote'>
-        Theres a big quote we can get going here. Kinda thinking of making this a usable page for apps
+        It takes a lot of courage to release the familiar and seemingly secure, to embrace the new. But there is no real security in what is no longer meaningful. There is more security in the adventurous and exciting, for in movement there is life, and in change there is power.
     </div>
     <div class='bottom'>
         <div class='signup'>
-            Call to action! Its time!
+            <div class='text'>Call to action! Its time!</div>
+            <div class='subtext'>
+                Sign up for our product by clilcking that button right over there. 
+            </div>
+            <button>Sign up</button>
         </div>
-        <div class='suvtext'>
-            Sign up for our product by clilcking that button right over there. 
-        </div>
-        <button>Sign up</button>
+        
     </div>
     <div class='footer'>
         copright @ me bitch
