Changed some html and fixed some mistakes on the body css to finalize most of the layout

--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Max M Welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class='topper'>
-        <div class='logo'>
-            Header Logo
-        </div>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
-    <div class='top'>
-        <div class='top-left'>
-            <div class='box'>
-                This Webiste is awesome
+    <div class='combo'>
+        <div class='topper'>
+            <div class='logo'>
+                Header Logo
             </div>
-            <div class='subtext'>
-                This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
-            </div>
-            <button>Sign up</button>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </div>
-        <img src="../landing-page/images/boat.png" width="310" height="250">
-    </div>
-    <div class='box'>
-        Some random information
+        <div class='top'>
+            <div class='top-left'>
+                <div class='box'>
+                    This Webiste is awesome
+                </div>
+                <div class='subtext'>
+                    This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
+                </div>
+                <button>Sign up</button>
+            </div>
+            <img src="../landing-page/images/boat.png" width="310" height="250">
+        </div>
     </div>
     <div class='mid'>
         <div class='card'>
@@ -50,14 +49,16 @@
     <div class='quote'>
         It takes a lot of courage to release the familiar and seemingly secure, to embrace the new. But there is no real security in what is no longer meaningful. There is more security in the adventurous and exciting, for in movement there is life, and in change there is power.
     </div>
-    <div class='bottom'>
-        <div class='signup'>
-            <div class='text'>Call to action! Its time!</div>
-            <div class='subtext'>
-                Sign up for our product by clilcking that button right over there. 
+    <div class="space">
+        <div class='bottom'>
+            <div class='signup'>
+                <div class='text'>Call to action! Its time!</div>
+                <div class='subtext'>
+                    Sign up for our product by clilcking that button right over there. 
+                </div>
             </div>
+            <button>Sign up</button> 
         </div>
-        <button>Sign up</button> 
     </div>
     <div class='footer'>
         copright @ me bitch
