--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
     </div>
     <div class='mid'>
         <div class='card'>
-            <img src="../landing-page/images/boat.png" width="50" hieght="50">
+            <img src="../landing-page/images/boat.png" width="100" hieght="100">
             <div class='subcard'> subtext for the cards</div>
         </div>
-        <div class='card'>Card 2
+        <div class='card'>
+            <img src="../landing-page/images/Insta.png" width="100" hieght="100">
             <div class='subcard'> subtext for the cards</div>
         </div>
-        <div class='card'>Card 3
+        <div class='card'>
+            <img src="../landing-page/images/tik.png" width="100" hieght="100">
             <div class='subcard'> subtext for the cards</div>
         </div>
-        <div class='card'>Card 4
+        <div class='card'>
+            <img src="../landing-page/images/github.png" width="60" hieght="60">
             <div class='subcard'> subtext for the cards</div>
         </div>
     </div>
