made some adjustments to the buttons

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </div>
         <div class='top'>
             <div class='top-left'>
-                <div class='box'>
-                    This Webiste is awesome
-                </div>
-                <div class='subtext'>
-                    This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
+                <div class='test'>
+                    <div class='box'>
+                        This Webiste is awesome
+                    </div>
+                    <div class='subtext'>
+                        This site has some subtext that goes here under the main title. Its a smaller font and the color is a lower contrast.
+                    </div>
                 </div>
                 <button>Sign up</button>
             </div>
@@ -33,20 +35,20 @@
     </div>
     <div class='mid'>
         <div class='card'>
-            <img src="../landing-page/images/boat.png" width="100" hieght="100">
-            <div class='subcard'> subtext for the cards</div>
+            <img src="../landing-page/images/Linkedin.png" width="100" hieght="100">
+            <div class='subcard'> My Linkedin</div>
         </div>
         <div class='card'>
             <img src="../landing-page/images/Insta.png" width="100" hieght="100">
-            <div class='subcard'> subtext for the cards</div>
+            <div class='subcard'> Check out my instagram</div>
         </div>
         <div class='card'>
             <img src="../landing-page/images/tik.png" width="100" hieght="100">
-            <div class='subcard'> subtext for the cards</div>
+            <div class='subcard'> Check out my Tik Tok</div>
         </div>
         <div class='card'>
             <img src="../landing-page/images/github.png" width="60" hieght="60">
-            <div class='subcard'> subtext for the cards</div>
+            <div class='subcard'> My Git</div>
         </div>
     </div>
     <div class='quote'>
@@ -60,7 +62,7 @@
                     Sign up for our product by clilcking that button right over there. 
                 </div>
             </div>
-            <button>Sign up</button> 
+        <button>Sign up</button> 
         </div>
     </div>
     <div class='footer'>
