formatted the bottom button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Sign up for our product by clilcking that button right over there. 
                 </div>
             </div>
-        <button>Sign up</button> 
+            <button id="bottom_button">Sign up</button> 
         </div>
     </div>
     <div class='footer'>
