--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <div class='logo'>
                 Header Logo
             </div>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+            <div class="links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
         </div>
         <div class='top'>
             <div class='top-left'>
